# bahdotsh.github.io

./: CNAME  Cargo.toml  README.md  astro.config.mjs  bundle.js  index.html  styles.css
.github/workflows/: deploy.yml
content/blog/: art-time-life.md  bah.md  blockchain.md  blockchaindictionary.md  death.md  how-does-blockchain-work-1.md  how-does-blockchain-work-2.md  life.md  moth.md  night.md  silence.md  theanswer.md  thejump.md  thoughts.md  why-i-built-zp.md
content/projects/: termgpt.md  zp.md
docs/: CNAME  bahdotsh-github-io-28988b36e810d740.js  bahdotsh-github-io-28988b36e810d740_bg.wasm  bahdotsh-github-io-5b50b5c7d7e56d01.js  bahdotsh-github-io-5b50b5c7d7e56d01_bg.wasm  index.html
src/: CNAME  config.ts  main.rs
src/components/: Header.astro  Intro.astro  Nav.astro  PageMeta.astro
src/layouts/: ContentLayout.astro  PageLayout.astro
src/pages/: home.rs  mod.rs
