[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bahdotsh/bahdotsh.github.io"
keywords = ["blog", "portfolio", "wasm", "yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-router = "0.15.0"
yew = "0.18.0"
